Made a bunch of files and custom hooks. Testing the UsePost hook

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Lobster&family=Lora:wght@400;600&family=Shantell+Sans:wght@300&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
